@@ -24,6 +24,11 @@ Fixed bugs:
 * <concat> would cause an exception if a <filelist> pointed to files
   that do not exist.
 
+Other changes:
+--------------
+
+* MailLogger now sets the Date header correctly.
+
 Changes from Ant 1.5.1Beta1 to 1.5.1
 ====================================
 
